# asr_whisperx

./: asr_whisperx.py  pyproject.toml  sep_and_asr.py
